[package]
name = "tm"
version = "0.1.0"
authors = ["doenis <Dstu93@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true
debug = false

[dependencies]
clap = "2.33.0"
chrono = {version = "0.4.9", features = ["serde"]}
serde = {version = "1.0.102", features = ["derive"]}
serde_json = "1.0.41"